<project
        xmlns="http://maven.apache.org/POM/4.0.0"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.sunbird</groupId>
    <artifactId>notification-play-service</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>notification-service</name>
    <properties>
        <project.version>1.0.0</project.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <jackson.version>2.9.9</jackson.version>
        <akka.x.version>2.5.22</akka.x.version>
        <junit.version>4.12</junit.version>
        <scoverage.plugin.version>1.1.1</scoverage.plugin.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <play2.version>2.7.2</play2.version>
        <play2.plugin.version>1.0.0-rc5</play2.plugin.version>
        <scala.version>2.12.11</scala.version>
        <powermock.version>2.0.2</powermock.version>
        <httpClient.version>4.5.1</httpClient.version>
        <commons-collections4.version>4.1</commons-collections4.version>
        <spotbugs.plugin.version>3.0.4</spotbugs.plugin.version>
        <surefire.plugin.version>2.22.0</surefire.plugin.version>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <configuration>
                    <destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
                    <dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
                    <excludes>
                        <exclude>**/common/**</exclude>
                        <exclude>**/router/**</exclude>
                        <exclude>**/Reverse*/**</exclude>
                        <exclude>**/routes.*</exclude>
                        <exclude>**/routes$javascript.**</exclude>
                        <exclude>org/sunbird/models/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkCount>3</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>sb-utils</module>
        <module>all-actors</module>
        <module>sb-actor</module>
        <module>notification-sdk</module>
        <module>service</module>
        <module>cassandra-utils</module>
        <module>sb-telemetry-utils</module>
        <module>sb-common</module>
    </modules>
</project>
